# rust-parallel

./: Cargo.toml  Makefile.toml  README.md  inputexample.txt
demo/: BruteForceGNU.sh  BruteForceScript.sh  BruteForceSequential.sh  CompressScript.sh  CompressSequential.sh  DryRun.sh  DryRunResult.sh  EmptyCacheFind.sh  FindScript.sh  FindSequential.sh  GenerateFile.sh  KeepOrder.sh  PasswordCrack.sh  PasswordCrack2.sh  PasswordCrack3.sh  RemoteExec.sh  demo.md  demo.txt
src/: entrycmd.rs  lib.rs  main.rs  main.rs.orig  parallel.rs
src/core/: interpreter.rs  interpretor.rs  job.rs  jobmanager.rs  mod.rs  parallel.pest  parser.rs
src/remote/: channel.rs  client.rs  mod.rs  server.rs
