[package]
name = "rust_parallel"
version = "0.1.0"
authors = [
    "Dorian Baret <email@domaine.name>",
    "Victor Malod <email@domaine.name>",
    "Lucas Chaloyard <email@domaine.name>",
    "Yael Para <email@domaine.name>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
    "process",
] }
